[package]
name = "hf_hub_use"
version = "0.1.0"
edition = "2021"

[lib]
name = "hf_hub_use"
path = "src/lib.rs"

[[bin]]
name = "hf_hub_use"
path = "src/main.rs"

[[bin]]
name = "list_repo_filenames"
path = "src/bin/list_repo_filenames.rs"


[dependencies]
candle-core = { workspace = true }
hf-hub = { workspace = true }
serde_json = { workspace = true }
